// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table should render table 1`] = `
<table
  class="tokenTable-0-0-1"
>
  <thead>
    <tr>
      <th>
        Name
      </th>
      <th>
        Value
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        color
      </td>
      <td>
        #ffffff
      </td>
    </tr>
    <tr>
      <td>
        opacity
      </td>
      <td>
        1
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table should update table on store changes 1`] = `
<table
  class="tokenTable-0-0-1"
>
  <thead>
    <tr>
      <th>
        Name
      </th>
      <th>
        Value
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        color
      </td>
      <td>
        #ffffff
      </td>
    </tr>
  </tbody>
</table>
`;
